Deskripsi Madrasah Digital

--- a/index.html
+++ b/index.html
@@ -81,12 +81,13 @@
                             </div>
                             <div class="col-lg-11 col-md-12 text-right text-left-xs text-left-sm">
                                 <div class="bar__module">
-                                    <ul class="menu-horizontal text-left">
+                                    <ul class="madrasah-menu menu-horizontal text-left">
                                         <!--<li> <a href="#">HOME<br></a> </li>-->
                                         <li> <a href="#about" class="btn-scroll-to">PROFIL<br></a> </li>
                                         <li> <a href="#program" class="btn-scroll-to">PROGRAM<br></a> </li>
                                         <li> <a href="#produk" class="btn-scroll-to">PRODUK<br></a> </li>
                                         <li> <a href="https://photos.app.goo.gl/yVmxy7kV6UMGmF8V8" target="_blank">PEMBANGUNAN<br></a> </li>
+                                        <li> <a href="https://medium.com/madrasah-digital" target="_blank">BLOG<br></a> </li>
                                         <li> <a href="https://kitabisa.com/patunganpesantren" target="_blank">DONASI<br></a> </li>
                                         <!--<li> <a href="#">BLOG<br></a> </li>-->
                                         <li> <a href="#contact" class="btn-scroll-to">KONTAK<br></a> </li>
@@ -144,7 +145,7 @@
                 </div>
             </section>
 
-            <section class="text-center" id="about">
+            <!--<section class="text-center" id="about">
                 <div class="container">
                     <h2 class="type--bold mb-3 text--color-madrasah-dark">Apa itu Madrasah Digital?</h2>
                     <p class="lead mb-5"> Simak video berikut untuk mengetahui lebih detail tentang Madrasah Digital </p>
@@ -155,27 +156,25 @@
                                 <div class="background-image-holder"> <img alt="image" src="assets/images/img-video-about.jpg"> </div>
                                 <div class="video-play-icon"></div> <iframe data-src="https://www.youtube.com/embed/6p45ooZOOPo?autoplay=1" allowfullscreen="allowfullscreen"></iframe> 
                             </div> 
-                            <!--<span>Stack includes Variant Page Builder — used by over <strong>17,000</strong> customers <a target="_blank" href="#customise-template">Try Now ↗</a></span>--> 
-                        </div>
-                    </div>
-                </div>
-            </section>
-
-            <!--<section class="switchable feature-large switchable--switch">
-                <div class="container">
-                    <div class="row justify-content-around">
-                        <div class="col-md-6"> <img alt="Image" class="border--round box-shadow-wide" src="assets/images/madrasah-digital-view.jpg"> </div>
-                        <div class="col-md-6 col-lg-5">
-                            <div class="switchable__text mt-0">
-                                <h2 class="type--bold text--color-madrasah-dark">Apa itu Madrasah Digital?</h2>
-                                <p class="lead"> Pesantren IT dan Tahfidz Al-Qur’an Madrasah Digital merupakan lembaga pendidikan non formal berbasis pesantren dengan fokus pada hafalan Al-Qur’an dan pemberian pembekalan keahlian dalam bidang bisnis dan teknologi kepada para santri. </p> 
-                                <a class="btn" href="#">
-                                    <span class="btn__text">Selengkapnya</span>
-                                </a> </div>
                         </div>
                     </div>
                 </div>
             </section>-->
+
+
+            <section class="text-center" id="about">
+                <div class="container">
+
+                    <div class="row">
+                        <div class="col-md-12 col-lg-8">
+                            <h2 class="type--bold text--color-madrasah-dark">Apa itu Madrasah Digital?</h2>
+                            <p class="lead text-left"> Pesantren IT dan Tahfidz Al-Qur’an Madrasah Digital merupakan sebuah lembaga pendidikan non formal berbasis pesantren dengan fokus pada hafalan Al-Qur’an dan pemberian pembekalan keahlian dalam bidang bisnis dan teknologi kepada para santri.  </p>
+                            <p class="lead mb-5 text-left"> Pada Madrasah Digital waktu belajar santri dibagi menjadi 2 waktu, yaitu Belajar Siang dan Belajar Malam. Waktu Belajar Siang berfokus pada pembekalan keahlian para santri berupa pembekalan dalam bidang IT dan pembekalan dalam bidang bisnis. Sedangkan Waktu Belajar Malam berfokus pada pembelajaran agama dan Al-Qur'an.</p>
+                            <img alt="Image" class="border--round box-shadow-wide" src="assets/images/view-general-pesantren.jpg">
+                        </div>
+                    </div>
+                </div>
+            </section>
 
             <section class="bg--secondary text-center" id="program">
                 <div class="container">
