Halaman Pendaftaran Santri

--- a/index.html
+++ b/index.html
@@ -89,7 +89,6 @@
                                         <li> <a href="https://photos.app.goo.gl/yVmxy7kV6UMGmF8V8" target="_blank">PEMBANGUNAN<br></a> </li>
                                         <li> <a href="https://medium.com/madrasah-digital" target="_blank">BLOG<br></a> </li>
                                         <li> <a href="https://kitabisa.com/patunganpesantren" target="_blank">DONASI<br></a> </li>
-                                        <!--<li> <a href="#">BLOG<br></a> </li>-->
                                         <li> <a href="#contact" class="btn-scroll-to">KONTAK<br></a> </li>
                                     </ul>
                                 </div>
@@ -107,7 +106,7 @@
                             <div class="mt--0">
                                 <h1 class="type--bold text--color-madrasah-dark"> Pesantren IT dan Tahfidz Al-Qur’an </h1>
                                 <p class="lead mb-5"> Membentuk 1 juta pengusaha dan ahli teknologi penghafal Al-Qur’an </p>
-                                <a class="btn btn--primary type--uppercase" href="#"> <span class="btn__text">
+                                <a class="btn btn--primary type--uppercase" href="https://www.madrasahdigital.id/pendaftaran"> <span class="btn__text">
 							Pendaftaran Santri</span> </a> 
                                 <a class="btn btn--primary-1 type--uppercase" href="https://kitabisa.com/patunganpesantren" target="_blank"> <span class="btn__text">
                             Donasi & Dukungan</span> </a>  
@@ -168,7 +167,7 @@
                     <div class="row">
                         <div class="col-md-12 col-lg-8">
                             <h2 class="type--bold text--color-madrasah-dark">Apa itu Madrasah Digital?</h2>
-                            <p class="lead text-left"> Pesantren IT dan Tahfidz Al-Qur’an Madrasah Digital merupakan sebuah lembaga pendidikan non formal berbasis pesantren dengan fokus pada hafalan Al-Qur’an dan pemberian pembekalan keahlian dalam bidang bisnis dan teknologi kepada para santri.  </p>
+                            <p class="lead text-left"> Pesantren IT dan Tahfidz Al-Qur’an Madrasah Digital merupakan sebuah lembaga pendidikan non formal berbasis pesantren yang terletak di Kabupaten Bekasi dengan fokus pada hafalan Al-Qur’an dan pemberian pembekalan keahlian dalam bidang bisnis dan teknologi kepada para santri.  </p>
                             <p class="lead mb-5 text-left"> Pada Madrasah Digital waktu belajar santri dibagi menjadi 2 waktu, yaitu Belajar Siang dan Belajar Malam. Waktu Belajar Siang berfokus pada pembekalan keahlian para santri berupa pembekalan dalam bidang IT dan pembekalan dalam bidang bisnis. Sedangkan Waktu Belajar Malam berfokus pada pembelajaran agama dan Al-Qur'an.</p>
                             <img alt="Image" class="border--round box-shadow-wide" src="assets/images/view-general-pesantren.jpg">
                         </div>
