Update button pendaftaran

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <div class="mt--0">
                                 <h1 class="type--bold text--color-madrasah-dark"> Pesantren IT dan Tahfidz Al-Qur’an </h1>
                                 <p class="lead mb-5"> Membentuk 1 juta pengusaha dan ahli teknologi penghafal Al-Qur’an </p>
-                                <a class="btn btn--primary type--uppercase" href="https://www.madrasahdigital.id/pendaftaran"> <span class="btn__text">
+                                <a class="btn btn--primary type--uppercase" href="https://www.madrasahdigital.id/pendaftaran/"> <span class="btn__text">
 							Pendaftaran Santri</span> </a> 
                                 <a class="btn btn--primary-1 type--uppercase" href="https://kitabisa.com/patunganpesantren" target="_blank"> <span class="btn__text">
                             Donasi & Dukungan</span> </a>  
