--- a/pendaftaran/index.html
+++ b/pendaftaran/index.html
@@ -106,8 +106,8 @@
                             <div class="mt--0">
                                 <h1 class="type--bold text--color-madrasah-dark"> Pendaftaran Santri Madrasah Digital </h1>
                                 <p class="lead mb-5"> Saat ini pendaftaran santri baru Pesantren IT dan Tahfidz Madrasah Digital belum dibuka. Pendaftaran program Madrasah Digital rencananya baru akan dibuka pada tahun 2022. Follow akun Instagram <a href="https://www.instagram.com/madrasahdigital/" target="_blank">@madrasahdigital</a> untuk mengikuti informasi seputar Madrasah Digital. </p>
-                                <a class="btn type--uppercase" href="#"> <span class="btn__text">
-                            Informasi Lengkap</span> </a>
+                                <a class="btn" href="https://www.instagram.com/madrasahdigital/" target="_blank"> <span class="btn__text">
+                            Menuju Instagram @madrasahdigital</span> </a>
                             </div>
                         </div>
 
