--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                             <div class="col-lg-11 col-md-12 text-right text-left-xs text-left-sm">
                                 <div class="bar__module">
                                     <ul class="madrasah-menu menu-horizontal text-left">
-                                        <!--<li> <a href="#">HOME<br></a> </li>-->
+                                        <li> <a href="https://www.madrasahdigital.id/">HOME<br></a> </li>
                                         <li> <a href="#about" class="btn-scroll-to">PROFIL<br></a> </li>
                                         <li> <a href="#program" class="btn-scroll-to">PROGRAM<br></a> </li>
                                         <li> <a href="#produk" class="btn-scroll-to">PRODUK<br></a> </li>
