--- a/pendaftaran/index.html
+++ b/pendaftaran/index.html
@@ -82,7 +82,7 @@
                             <div class="col-lg-11 col-md-12 text-right text-left-xs text-left-sm">
                                 <div class="bar__module">
                                     <ul class="madrasah-menu menu-horizontal text-left">
-                                        <!--<li> <a href="#">HOME<br></a> </li>-->
+                                        <li> <a href="https://www.madrasahdigital.id/">HOME<br></a> </li>
                                         <li> <a href="https://www.madrasahdigital.id/#about" class="btn-scroll-to">PROFIL<br></a> </li>
                                         <li> <a href="https://www.madrasahdigital.id/#program" class="btn-scroll-to">PROGRAM<br></a> </li>
                                         <li> <a href="https://www.madrasahdigital.id/#produk" class="btn-scroll-to">PRODUK<br></a> </li>
