--- a/pendaftaran/index.html
+++ b/pendaftaran/index.html
@@ -104,7 +104,7 @@
                     <div class="row justify-content-between">
                         <div class="col-lg-10 col-md-10">
                             <div class="mt--0">
-                                <h1 class="type--bold text--color-madrasah-dark"> Pendaftaran Santri Madrasah Digital </h1>
+                                <h1 class="type--bold text--color-madrasah-dark"> Pendaftaran Santri Belum Dibuka </h1>
                                 <p class="lead mb-5"> Saat ini pendaftaran santri baru Pesantren IT dan Tahfidz Madrasah Digital belum dibuka. Pendaftaran program Madrasah Digital rencananya baru akan dibuka pada tahun 2022. Follow akun Instagram <a href="https://www.instagram.com/madrasahdigital/" target="_blank">@madrasahdigital</a> untuk mengikuti informasi seputar Madrasah Digital. </p>
                                 <a class="btn" href="https://www.instagram.com/madrasahdigital/" target="_blank"> <span class="btn__text">
                             Menuju Instagram @madrasahdigital</span> </a>
