--- a/index.html
+++ b/index.html
@@ -311,9 +311,41 @@
                     </div>
                 </div>
             </section>
+            <section class="switchable switchable--switch bg--secondary bg--secondary-madrasah">
+                <div class="container">
+                    <div class="row justify-content-between">
+                        <div class="col-md-6 col-lg-5">
+                            <div class="switchable__text">
+                                <div class="switchable__text">
+                                    <h2>Kami ingin menciptakan tempat pendidikan IT yang murah bahkan gratis untuk para penghafal Al-Qur'an</h2>
+                                    <p class="lead"> Mari berpartisipasi membentuk 1 juta pengusaha dan ahli teknologi penghafal Al-Qur’an bersama Madrasah Digital</p>
+                                    <a class="btn btn--primary-1" href="https://photos.app.goo.gl/yVmxy7kV6UMGmF8V8" target="_blank">
+                                    <span class="btn__text">Bergabung menjadi Donatur</span>
+                                </a>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-6 col-lg-4 col-12">
+                            <div class="pricing pricing-1 boxed boxed--lg boxed--border">
+                                <h3>Biaya Program</h3> <span class="h2"><strong>DONASI SEIKHLASNYA</strong></span> <span class="type--fine-print">Program Belajar 1 Tahun</span>
+                                <hr>
+                                <ul>
+                                    <li><span class="checkmark bg--primary-1"></span><span>Asrama</span></li>
+                                    <li><span class="checkmark bg--primary-1"></span><span>Internet Unlimited</span></li>
+                                    <li><span class="checkmark bg--primary-1"></span><span>Al-Qur'an</span></li>
+                                    <li><span class="checkmark bg--primary-1"></span><span>Makan 3 Kali Sehari</span></li>
+                                    <li><span class="checkmark bg--primary-1"> </span><span>Lab Komputer</span></li>
+                                </ul>
+                                <a class="btn btn--primary" href="https://www.madrasahdigital.id/pendaftaran/"> <span class="btn__text">
+                            DAFTAR SEBAGAI SANTRI</span> </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
             <section class="text-center" id="produk">
                 <div class="container">
-                    <h2 class="type--bold mb-3 text--color-madrasah-dark">Produk Madrasah Digital</h2>
+                    <h2 class="type--bold mb-3 text--color-madrasah-dark">Produk Pendukung</h2>
                     <p class="lead mb-5"> Produk-produk yang telah membantu kami membangun pesantren gratis untuk para penghafal Al-Qur'an </p>
 
                     <div class="row justify-content-center">
