--- a/index.html
+++ b/index.html
@@ -345,8 +345,8 @@
             </section>
             <section class="text-center" id="produk">
                 <div class="container">
-                    <h2 class="type--bold mb-3 text--color-madrasah-dark">Produk Pendukung</h2>
-                    <p class="lead mb-5"> Produk-produk yang telah membantu kami membangun pesantren gratis untuk para penghafal Al-Qur'an </p>
+                    <h2 class="type--bold mb-3 text--color-madrasah-dark">Produk dan Layanan Pendukung</h2>
+                    <p class="lead mb-5"> Produk dan layanan yang telah membantu kami membangun pesantren gratis untuk para penghafal Al-Qur'an </p>
 
                     <div class="row justify-content-center">
                         <div class="col-md-4">
@@ -354,6 +354,15 @@
                                 <div class="feature__body boxed boxed--lg boxed--border">
                                     <h3 class="type--bold text--color-madrasah-dark">67Benda</h3>
                                     <p class="lead"> Aplikasi Android pemantau aktivitas santri Pesantren Persatuan Islam 67 Benda </p> <a class="btn" href="https://play.google.com/store/apps/details?id=com.madrasahdigital.walisantri.ppi67benda" target="_blank">
+                                    <span class="btn__text">Lihat detail</span>
+                                </a> </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="feature feature-1"> <img alt="Image" src="assets/images/produk-dirosah.jpg">
+                                <div class="feature__body boxed boxed--lg boxed--border">
+                                    <h3 class="type--bold text--color-madrasah-dark">MadrasahQuran</h3>
+                                    <p class="lead"> Kursus online belajar membaca Al-Qur'an dari dasar hingga mahir </p> <a class="btn" href="#">
                                     <span class="btn__text">Lihat detail</span>
                                 </a> </div>
                             </div>
