Launching Web Dulu

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                         <div class="row">
                             <div class="col-lg-1 col-md-2 hidden-xs">
                                 <div class="bar__module">
-                                    <a href="index.html"> <img class="logo logo-dark logo-madrasah" alt="logo" src="assets/images/logo-madrasah.png"> <img class="logo logo-light logo-madrasah" alt="logo" src="assets/img/logo-md.png"> </a>
+                                    <a href="https://www.madrasahdigital.id/"> <img class="logo logo-dark logo-madrasah" alt="logo" src="assets/images/logo-madrasah.png"> <img class="logo logo-light logo-madrasah" alt="logo" src="assets/img/logo-md.png"> </a>
                                 </div>
                             </div>
                             <div class="col-lg-11 col-md-12 text-right text-left-xs text-left-sm">
@@ -85,7 +85,7 @@
                                         <li> <a href="https://www.madrasahdigital.id/">HOME<br></a> </li>
                                         <li> <a href="#about" class="btn-scroll-to">PROFIL<br></a> </li>
                                         <li> <a href="#program" class="btn-scroll-to">PROGRAM<br></a> </li>
-                                        <li> <a href="#produk" class="btn-scroll-to">PRODUK<br></a> </li>
+                                        <!--<li> <a href="#produk" class="btn-scroll-to">PRODUK<br></a> </li>-->
                                         <li> <a href="https://photos.app.goo.gl/yVmxy7kV6UMGmF8V8" target="_blank">PEMBANGUNAN<br></a> </li>
                                         <li> <a href="https://medium.com/madrasah-digital" target="_blank">BLOG<br></a> </li>
                                         <li> <a href="https://kitabisa.com/patunganpesantren" target="_blank">DONASI<br></a> </li>
@@ -311,7 +311,7 @@
                     </div>
                 </div>
             </section>
-            <section class="switchable switchable--switch bg--secondary bg--secondary-madrasah">
+            <section class="switchable switchable--switch">
                 <div class="container">
                     <div class="row justify-content-between">
                         <div class="col-md-6 col-lg-5">
@@ -319,31 +319,31 @@
                                 <div class="switchable__text">
                                     <h2>Kami ingin menciptakan tempat pendidikan IT yang murah bahkan gratis untuk para penghafal Al-Qur'an</h2>
                                     <p class="lead"> Mari berpartisipasi membentuk 1 juta pengusaha dan ahli teknologi penghafal Al-Qur’an bersama Madrasah Digital</p>
-                                    <a class="btn btn--primary-1" href="https://photos.app.goo.gl/yVmxy7kV6UMGmF8V8" target="_blank">
-                                    <span class="btn__text">Bergabung menjadi Donatur</span>
+                                    <a class="btn btn--primary-1" href="https://kitabisa.com/patunganpesantren" target="_blank">
+                                    <span class="btn__text">DONASI & DUKUNGAN</span>
                                 </a>
                                 </div>
                             </div>
                         </div>
                         <div class="col-md-6 col-lg-4 col-12">
                             <div class="pricing pricing-1 boxed boxed--lg boxed--border">
-                                <h3>Biaya Program</h3> <span class="h2"><strong>DONASI SEIKHLASNYA</strong></span> <span class="type--fine-print">Program Belajar 1 Tahun</span>
+                                <h3>Biaya Program</h3> <span class="h2"><strong>GRATIS</strong></span> <span class="type--fine-print">Program Belajar 1 Tahun</span>
                                 <hr>
                                 <ul>
                                     <li><span class="checkmark bg--primary-1"></span><span>Asrama</span></li>
                                     <li><span class="checkmark bg--primary-1"></span><span>Internet Unlimited</span></li>
-                                    <li><span class="checkmark bg--primary-1"></span><span>Al-Qur'an</span></li>
-                                    <li><span class="checkmark bg--primary-1"></span><span>Makan 3 Kali Sehari</span></li>
+                                    <li><span class="checkmark bg--primary-1"></span><span>Mushaf Al-Qur'an</span></li>
+                                    <!--<li><span class="checkmark bg--primary-1"></span><span>Makan 3 Kali Sehari</span></li>-->
                                     <li><span class="checkmark bg--primary-1"> </span><span>Lab Komputer</span></li>
                                 </ul>
                                 <a class="btn btn--primary" href="https://www.madrasahdigital.id/pendaftaran/"> <span class="btn__text">
-                            DAFTAR SEBAGAI SANTRI</span> </a>
+                            PENDAFTARAN SANTRI</span> </a>
                             </div>
                         </div>
                     </div>
                 </div>
             </section>
-            <section class="text-center" id="produk">
+            <!--<section class="text-center" id="produk">
                 <div class="container">
                     <h2 class="type--bold mb-3 text--color-madrasah-dark">Produk dan Layanan Pendukung</h2>
                     <p class="lead mb-5"> Produk dan layanan yang telah membantu kami membangun pesantren gratis untuk para penghafal Al-Qur'an </p>
@@ -378,8 +378,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
-            
+            </section>-->
             <section class="switchable feature-large bg--secondary">
                 <div class="container">
                     <div class="row justify-content-around">
