--- a/pendaftaran/index.html
+++ b/pendaftaran/index.html
@@ -76,7 +76,7 @@
                         <div class="row">
                             <div class="col-lg-1 col-md-2 hidden-xs">
                                 <div class="bar__module">
-                                    <a href="index.html"> <img class="logo logo-dark logo-madrasah" alt="logo" src="../assets/images/logo-madrasah.png"> <img class="logo logo-light logo-madrasah" alt="logo" src="../assets/img/logo-md.png"> </a>
+                                    <a href="https://www.madrasahdigital.id/"> <img class="logo logo-dark logo-madrasah" alt="logo" src="../assets/images/logo-madrasah.png"> <img class="logo logo-light logo-madrasah" alt="logo" src="../assets/img/logo-md.png"> </a>
                                 </div>
                             </div>
                             <div class="col-lg-11 col-md-12 text-right text-left-xs text-left-sm">
@@ -85,7 +85,7 @@
                                         <li> <a href="https://www.madrasahdigital.id/">HOME<br></a> </li>
                                         <li> <a href="https://www.madrasahdigital.id/#about" class="btn-scroll-to">PROFIL<br></a> </li>
                                         <li> <a href="https://www.madrasahdigital.id/#program" class="btn-scroll-to">PROGRAM<br></a> </li>
-                                        <li> <a href="https://www.madrasahdigital.id/#produk" class="btn-scroll-to">PRODUK<br></a> </li>
+                                        <!--<li> <a href="https://www.madrasahdigital.id/#produk" class="btn-scroll-to">PRODUK<br></a> </li>-->
                                         <li> <a href="https://photos.app.goo.gl/yVmxy7kV6UMGmF8V8" target="_blank">PEMBANGUNAN<br></a> </li>
                                         <li> <a href="https://medium.com/madrasah-digital" target="_blank">BLOG<br></a> </li>
                                         <li> <a href="https://kitabisa.com/patunganpesantren" target="_blank">DONASI<br></a> </li>
