Update Meta Data

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Pesantren IT dan Tahfidz Al-Qur’an Madrasah Digital</title>
+        <title>Madrasah Digital, Membentuk 1 Juta Pengusaha dan Ahli Teknologi Penghafal Al-Qur’an</title>
 
         <link rel="apple-touch-icon" sizes="57x57" href="assets/img/icon/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="assets/img/icon/apple-icon-60x60.png">
@@ -26,8 +26,8 @@
         <link rel="canonical" href="https://www.madrasahdigital.id/">
         <meta property="og:locale" content="id_ID">
         <meta property="og:type" content="article">
-        <meta property="og:title" content="Pesantren IT dan Tahfidz Al-Qur’an Madrasah Digital">
-        <meta property="og:description" content="Program pesantren untuk membentuk 1 juta pengusaha dan ahli teknologi penghafal Al-Qur’an">
+        <meta property="og:title" content="Madrasah Digital, Membentuk 1 Juta Pengusaha dan Ahli Teknologi Penghafal Al-Qur’an">
+        <meta property="og:description" content="Pesantren IT dan Tahfidz Al-Qur’an Madrasah Digital merupakan sebuah lembaga pendidikan non formal berbasis pesantren yang terletak di Kabupaten Bekasi dengan fokus pada hafalan Al-Qur’an dan pemberian pembekalan keahlian dalam bidang bisnis dan teknologi kepada para santri.">
         <meta property="og:url" content="">
         <meta property="og:site_name" content="https://www.madrasahdigital.id/">
         <meta property="article:publisher" content="https://www.facebook.com/madrasahdigital.id/">
@@ -35,8 +35,8 @@
         <meta property="og:image:width" content="1200">
         <meta property="og:image:height" content="627">
 
-        <meta name="description" content="Program pesantren untuk membentuk 1 juta pengusaha dan ahli teknologi penghafal Al-Qur’an">
-        <meta property="description" content="Program pesantren untuk membentuk 1 juta pengusaha dan ahli teknologi penghafal Al-Qur’an">
+        <meta name="description" content="Pesantren IT dan Tahfidz Al-Qur’an Madrasah Digital merupakan sebuah lembaga pendidikan non formal berbasis pesantren yang terletak di Kabupaten Bekasi dengan fokus pada hafalan Al-Qur’an dan pemberian pembekalan keahlian dalam bidang bisnis dan teknologi kepada para santri.">
+        <meta property="description" content="Pesantren IT dan Tahfidz Al-Qur’an Madrasah Digital merupakan sebuah lembaga pendidikan non formal berbasis pesantren yang terletak di Kabupaten Bekasi dengan fokus pada hafalan Al-Qur’an dan pemberian pembekalan keahlian dalam bidang bisnis dan teknologi kepada para santri.">
         <meta property="language" content="Indonesia">
         <meta property="revisit-after" content="7">
         <meta property="rating" content="general">
