--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                 </div>
             </section>
 
-            <!--<section class="text-center" id="about">
+            <section class="text-center" id="about">
                 <div class="container">
                     <h2 class="type--bold mb-3 text--color-madrasah-dark">Apa itu Madrasah Digital?</h2>
                     <p class="lead mb-5"> Simak video berikut untuk mengetahui lebih detail tentang Madrasah Digital </p>
@@ -178,15 +178,15 @@
                         <div class="col-md-12 col-lg-10">
                             <div class="video-cover border--round">
                                 <div class="background-image-holder"> <img alt="image" src="assets/images/img-video-about.jpg"> </div>
-                                <div class="video-play-icon"></div> <iframe data-src="https://www.youtube.com/embed/6p45ooZOOPo?autoplay=1" allowfullscreen="allowfullscreen"></iframe> 
+                                <div class="video-play-icon"></div> <iframe data-src="https://www.youtube.com/embed/BhWtYnast8w?autoplay=1" allowfullscreen="allowfullscreen"></iframe> 
                             </div> 
                         </div>
                     </div>
                 </div>
-            </section>-->
+            </section>
 
 
-            <section class="text-center" id="about">
+            <!--<section class="text-center" id="about">
                 <div class="container">
 
                     <div class="row">
@@ -198,7 +198,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section>-->
 
             <section class="bg--secondary text-center" id="program">
                 <div class="container">
@@ -261,9 +261,9 @@
                         <div class="col-md-3 col-6">
                             <div class="program-madrasah mb-5">
                                 <div class="program-icon"> 
-                                    <img alt="Belajar Hidroponik" src="assets/images/icon-circle-program-7.png" class="program-icon-asset">
+                                    <img alt="Belajar Graphic Design" src="assets/images/icon-circle-program-9.png" class="program-icon-asset">
                                 </div>
-                                <h4 class="mt-3">Hidroponik</h4>
+                                <h4 class="mt-3">Graphic Design</h4>
                             </div>
                         </div>
                         <div class="col-md-3 col-6">
