--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
                     </div>
                 </div>
             </section>
-            <section class="switchable switchable--switch">
+            <!--<section class="switchable switchable--switch">
                 <div class="container">
                     <div class="row justify-content-between">
                         <div class="col-md-6 col-lg-5">
@@ -358,7 +358,7 @@
                                     <li><span class="checkmark bg--primary-1"></span><span>Asrama</span></li>
                                     <li><span class="checkmark bg--primary-1"></span><span>Internet Unlimited</span></li>
                                     <li><span class="checkmark bg--primary-1"></span><span>Mushaf Al-Qur'an</span></li>
-                                    <!--<li><span class="checkmark bg--primary-1"></span><span>Makan 3 Kali Sehari</span></li>-->
+                                    <li><span class="checkmark bg--primary-1"></span><span>Makan 3 Kali Sehari</span></li>
                                     <li><span class="checkmark bg--primary-1"> </span><span>Lab Komputer</span></li>
                                 </ul>
                                 <a class="btn btn--primary" href="https://www.madrasahdigital.id/pendaftaran/"> <span class="btn__text">
@@ -367,7 +367,7 @@
                         </div>
                     </div>
                 </div>
-            </section>
+            </section>-->
             <!--<section class="text-center" id="produk">
                 <div class="container">
                     <h2 class="type--bold mb-3 text--color-madrasah-dark">Produk dan Layanan Pendukung</h2>
